Further work on Vendors, added address and order tabs. Incomplete.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -6,7 +6,7 @@ admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
-admin.account.detail.tab.addresses=Addresses
+admin.account.detail.tab.vendoraddresses=Addresses
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
@@ -550,10 +550,40 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+
 admin.vendor=Vendor Manager
-admin.vendor.dashboard=Vendor Dashboard
-admin.vendor.detail=Vendor Detail
-admin.vendor.list=Vendor Listing
+admin.vendor.createVendor=Create New Vendor
+admin.vendor.deleteVendor=Delete Vendor
+admin.vendor.deleteVendor_confirm=Are you sure that you would like to delete this vendor?
+admin.vendor.deleteVendor_nav=Delete
+admin.vendor.detailVendor=Vendor Detail
+admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
+admin.vendor.detail.tab.vendorOrders=Orders
+admin.vendor.editVendor=Edit Vendor
+admin.vendor.listVendors=List Vendors
+admin.vendor.listVendors_hint=The Vendor Listing shows a grid of all vendors in the system.
+admin.vendor.saveVendor=Save Vendor
+admin.vendor.saveVendor_nav=Save
+admin.vendor.saveVendor_success=The Vendor was sucessfully saved
+admin.vendoraddress.edit.addVendorAddress=Add Vendor Address
+
+
+
+admin.vendorOrder=Vendor Order Manager
+admin.vendorOrder.createVendorOrder=Create New Vendor Order
+admin.vendorOrder.deleteVendorOrder=Delete Vendor Order
+admin.vendorOrder.deleteVendorOrder_confirm=Are you sure that you would like to delete this vendor order?
+admin.vendorOrder.deleteVendorOrder_nav=Delete
+admin.vendorOrder.detailVendorOrder=Vendor Order Detail
+admin.vendorOrder.detail.tab.vendorOrderFulfillments=Vender Order Fulfillments
+admin.vendorOrder.editVendorOrder=Edit Vendor Order
+admin.vendorOrder.listVendorOrders=List Vendor Orders
+admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of all vendor orders in the system.
+admin.vendorOrder.saveVendorOrder=Save Vendor Order
+admin.vendorOrder.saveVendorOrder_nav=Save
+admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
+
+
 defaultMessage_Boolean={1} must be a valid boolean.
 defaultMessage_CollectionSize_Between={1} size is not between {2} and {3}.
 defaultMessage_CollectionSize_GTE={1} size is not equal to or greater than {2}.
@@ -1136,28 +1166,28 @@ entity.user.company=company
 entity.user.firstName=firstName
 entity.user.lastName=lastName
 entity.user.muraUserID=muraUserID
-entity.vendor.accountNumber=accountNumber
-entity.vendor.brands=brands
-entity.vendor.emailAddresses=emailAddresses
-entity.vendor.phoneNumbers=phoneNumbers
-entity.vendor.vendorID=vendorID
-entity.vendor.vendorName=vendorName
-entity.vendor.vendorWebsite=vendorWebsite
-entity.vendoraccount.account=account
-entity.vendoraccount.roleType=roleType
-entity.vendoraccount.vendor=vendor
-entity.vendoraccount.vendorAccountID=vendorAccountID
+entity.vendor.accountNumber=Account Number
+entity.vendor.emailAddresses=Email Addresses
+entity.vendor.phoneNumbers=Phone Numbers
+entity.vendor.vendorID=Vendor ID
+entity.vendor.vendorName=Vendor Name
+entity.vendor.vendorWebsite=Vendor Website
 entity.vendoraddress.address=address
 entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
 entity.vendoraddress.vendorAddressType=vendorAddressType
-entity.vendorbrand.brand=brand
-entity.vendorbrand.vendor=vendor
-entity.vendorbrand.vendorBrandID=vendorBrandID
 entity.vendoremail.email=email
 entity.vendoremail.vendor=vendor
 entity.vendoremail.vendorEmailID=vendorEmailID
 entity.vendoremail.vendorEmailType=vendorEmailType
+
+entity.vendorOrder.vendor=Vendor
+entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
+entity.vendorOrder.vendorOrderNumber=Order Number
+entity.vendorOrder.vendorOrderType=Order Type
+entity.vendorOrder.vendorOrderid=Vendor Order ID
+entity.vendorOrder.total=Total
+
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
 entity.vendorphone.vendorPhoneID=vendorPhoneID
