Further work on Vendor Orders. Javascript fix on Orders screen (clearing dates from input boxes).

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -192,7 +192,7 @@ admin.order.list=List Orders
 admin.order.list.actions=Actions
 admin.order.list.exportDisplayedOrders=Export Displayed Orders
 admin.order.list.exportSearchResults=Export Search Results
-admin.order.list.searchresultsfound=Search Results Found
+admin.order.list.searchresultsfound=Search Result(s) Found
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listcart=List Carts
 admin.order.listcart_nav=View Carts
@@ -566,9 +566,6 @@ admin.vendor.saveVendor=Save Vendor
 admin.vendor.saveVendor_nav=Save
 admin.vendor.saveVendor_success=The Vendor was sucessfully saved
 admin.vendoraddress.edit.addVendorAddress=Add Vendor Address
-
-
-
 admin.vendorOrder=Vendor Order Manager
 admin.vendorOrder.createVendorOrder=Create New Vendor Order
 admin.vendorOrder.deleteVendorOrder=Delete Vendor Order
@@ -582,6 +579,10 @@ admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of
 admin.vendorOrder.saveVendorOrder=Save Vendor Order
 admin.vendorOrder.saveVendorOrder_nav=Save
 admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
+admin.vendorOrder.search=Search
+admin.vendorOrder.search.invaliddates=An invalid date was entered
+admin.vendorOrder.list.showAdvancedSearch=Advanced Search
+admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
 
 
 defaultMessage_Boolean={1} must be a valid boolean.
