More work on Vendors. Added proper address management. Added Canadian Provinces.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -553,8 +553,12 @@ admin.sku.uploadImage=Upload Image
 
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
+admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully deleted.
+admin.vendor.deleteVendorAddress_error=Errors were encountered while deleting the vendor address.
+admin.vendor.deletevendoraddress_confirm=Are you sure that you would like to delete this vendor address?
 admin.vendor.deleteVendor=Delete Vendor
 admin.vendor.deleteVendor_confirm=Are you sure that you would like to delete this vendor?
+admin.vendor.deletevendor_disabled=Vendor can not be deleted because it is in use by a Vendor Order
 admin.vendor.deleteVendor_nav=Delete
 admin.vendor.detailVendor=Vendor Detail
 admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
@@ -572,7 +576,14 @@ admin.vendorOrder.deleteVendorOrder=Delete Vendor Order
 admin.vendorOrder.deleteVendorOrder_confirm=Are you sure that you would like to delete this vendor order?
 admin.vendorOrder.deleteVendorOrder_nav=Delete
 admin.vendorOrder.detailVendorOrder=Vendor Order Detail
-admin.vendorOrder.detail.tab.vendorOrderFulfillments=Vender Order Fulfillments
+admin.vendorOrder.detail=Vendor Order Detail
+admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
+admin.vendorOrder.detail.tab.vendorOrderDeliveries=Deliveries
+admin.vendorOrder.detail.tab.vendorOrderItems=Items
+admin.vendorOrder.detail.vendorOrdertotals=Vendor Order Totals
+admin.vendorOrder.detail.subtotal=Subtotal
+admin.vendorOrder.detail.totaltax=Total Tax
+admin.vendorOrder.detail.total=Total
 admin.vendorOrder.editVendorOrder=Edit Vendor Order
 admin.vendorOrder.listVendorOrders=List Vendor Orders
 admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of all vendor orders in the system.
@@ -1169,10 +1180,12 @@ entity.user.lastName=lastName
 entity.user.muraUserID=muraUserID
 entity.vendor.accountNumber=Account Number
 entity.vendor.emailAddresses=Email Addresses
+entity.Vendor.emailAddress=Email Address
 entity.vendor.phoneNumbers=Phone Numbers
 entity.vendor.vendorID=Vendor ID
 entity.vendor.vendorName=Vendor Name
 entity.vendor.vendorWebsite=Vendor Website
+entity.vendor.vendorOrderType=Order Type
 entity.vendoraddress.address=address
 entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
@@ -1188,6 +1201,10 @@ entity.vendorOrder.vendorOrderNumber=Order Number
 entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrder.total=Total
+entity.vendorOrder.createdDateTime=Created Date/Time
+
+entity.vendorOrderitem.quantity
+
 
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
