Added location logic. Added Brands to Vendors, but running into problems (not updating).

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -89,6 +89,23 @@ admin.integration.edit=Edit Integration
 admin.integration.list=List Integration Services
 admin.integration.save=Save
 admin.integration.save_success=The Integration Service has been saved Successfully
+
+admin.location=Location Manager
+admin.location.createLocation=Create New Location
+admin.location.deleteLocation=Delete Location
+admin.location.deleteLocation_confirm=Are you sure that you would like to delete this location?
+admin.location.deletelocation_disabled=Location can not be deleted.
+admin.location.deleteLocation_nav=Delete
+admin.location.deleteLocation_success=The location was deleted successfully.
+admin.location.deleteLocation_failure=The location could not be deleted.
+admin.location.detailLocation=Location Detail
+admin.location.editLocation=Edit Location
+admin.location.listLocations=List Locations
+admin.location.listLocations_hint=The Location Listing shows a grid of all locations in the system.
+admin.location.nolocationsdefined=There are currently no locations defined.
+admin.location.saveLocation=Save Location
+admin.location.saveLocation_nav=Save
+admin.location.saveLocation_success=The Location was sucessfully saved
 admin.main=Dashboard
 admin.main.default=Dashboard
 admin.nav.back=Go Back
@@ -550,7 +567,6 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
-
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
 admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully deleted.
@@ -579,7 +595,7 @@ admin.vendorOrder.detailVendorOrder=Vendor Order Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
 admin.vendorOrder.detail.tab.vendorOrderDeliveries=Deliveries
-admin.vendorOrder.detail.tab.vendorOrderItems=Items
+admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.vendorOrdertotals=Vendor Order Totals
 admin.vendorOrder.detail.subtotal=Subtotal
 admin.vendorOrder.detail.totaltax=Total Tax
@@ -818,10 +834,10 @@ entity.integration.dataActiveFlag=Data Integration Active
 entity.integration.integrationName=Integration Name
 entity.integration.paymentActiveFlag=Payment Integration Active
 entity.integration.shippingActiveFlag=Shipping Integration Active
-entity.location.locationID=locationID
-entity.location.locationName=locationName
-entity.location.sellStockOnWeb=sellStockOnWeb
-entity.location.sellStockOnWebWholesale=sellStockOnWebWholesale
+entity.location.locationID=Location ID
+entity.location.locationName=Location Name
+entity.location.sellStockOnWeb=Sell Stock On Web
+entity.location.sellStockOnWebWholesale=Sell Stock On Web Wholesale
 entity.modifiedByAccount=Modified By
 entity.modifiedDateTime=Last Changed
 entity.option=Product Option
@@ -1182,6 +1198,8 @@ entity.vendor.accountNumber=Account Number
 entity.vendor.emailAddresses=Email Addresses
 entity.Vendor.emailAddress=Email Address
 entity.vendor.phoneNumbers=Phone Numbers
+entity.vendor.numberBrands=Brands Offered
+entity.Vendor.brands=Brands Offered
 entity.vendor.vendorID=Vendor ID
 entity.vendor.vendorName=Vendor Name
 entity.vendor.vendorWebsite=Vendor Website
@@ -1200,10 +1218,14 @@ entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
 entity.vendorOrder.vendorOrderNumber=Order Number
 entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
+entity.vendorOrder.subtotal=Subtotal
+entity.vendorOrder.taxTotal=Tax
 entity.vendorOrder.total=Total
 entity.vendorOrder.createdDateTime=Created Date/Time
 
-entity.vendorOrderitem.quantity
+entity.vendorOrderitem.quantityIn=Quantity In
+entity.vendorOrderitem.detail.cost=Cost
+entity.vendorOrderitem.stockLocation=Location
 
 
 entity.vendorphone.phone=phone
