--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -573,6 +573,7 @@ admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully del
 admin.vendor.deleteVendorAddress_error=Errors were encountered while deleting the vendor address.
 admin.vendor.deletevendoraddress_confirm=Are you sure that you would like to delete this vendor address?
 admin.vendor.deleteVendor=Delete Vendor
+admin.vendor.delete_success=The vendor was successfully deleted.
 admin.vendor.deleteVendor_confirm=Are you sure that you would like to delete this vendor?
 admin.vendor.deletevendor_disabled=Vendor can not be deleted because it is in use by a Vendor Order
 admin.vendor.deleteVendor_nav=Delete
