Many little fixes. Further work on Vendor Orders.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -7,6 +7,7 @@ admin.account.delete_confirm=Are you sure that you would like to delete this acc
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
 admin.account.detail.tab.vendoraddresses=Addresses
+admin.account.detail.tab.vendorbrands=Brands
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
@@ -597,7 +598,11 @@ admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
 admin.vendorOrder.detail.tab.vendorOrderDeliveries=Deliveries
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
-admin.vendorOrder.detail.vendorOrdertotals=Vendor Order Totals
+admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
+admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
+admin.vendorOrder.detail.vendorproduct=Product
+admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
+admin.vendorOrder.detail.vendorproduct_edit=Edit
 admin.vendorOrder.detail.subtotal=Subtotal
 admin.vendorOrder.detail.totaltax=Total Tax
 admin.vendorOrder.detail.total=Total
@@ -607,6 +612,7 @@ admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of
 admin.vendorOrder.saveVendorOrder=Save Vendor Order
 admin.vendorOrder.saveVendorOrder_nav=Save
 admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
+admin.vendorOrder.savevendorOrder_nowaddorderitems=The vendor order was successfully saved. Now add order items.
 admin.vendorOrder.search=Search
 admin.vendorOrder.search.invaliddates=An invalid date was entered
 admin.vendorOrder.list.showAdvancedSearch=Advanced Search
