More changes to Vendor Order Items interface and logic. Spelling fix on Price Groups. Added helper info to implicit "Save" logic.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -249,7 +249,7 @@ admin.pricegroup.delete_confirm=Are you sure you want to delete this price group
 admin.pricegroup.delete_nav=Delete
 admin.pricegroup.delete_success=Price Group was deleted successfully
 admin.pricegroup.deletepricegroup_disabled=This price group can not be deleted because it is being inherited by another price group.
-admin.pricegroup.detail.globalwarning=<strong>Warning\!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will diable the global flag on that rate.
+admin.pricegroup.detail.globalwarning=<strong>Warning\!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will disable the global flag on that rate.
 admin.pricegroup.detail.ratetype=Rate Type
 admin.pricegroup.detail_hint=View the Info page of a given Price Group
 admin.pricegroup.detail_permission=View Price Group Info
@@ -603,16 +603,20 @@ admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
 admin.vendorOrder.detail.vendorproduct=Product
 admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
 admin.vendorOrder.detail.vendorproduct_edit=Edit
+admin.vendorOrder.detail.vendorproducts_empty=Sorry, there are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
 admin.vendorOrder.detail.subtotal=Subtotal
 admin.vendorOrder.detail.totaltax=Total Tax
 admin.vendorOrder.detail.total=Total
 admin.vendorOrder.editVendorOrder=Edit Vendor Order
+admin.vendororder.editvendororderproductassignment=Ordering Product: {1}
 admin.vendorOrder.listVendorOrders=List Vendor Orders
 admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of all vendor orders in the system.
 admin.vendorOrder.saveVendorOrder=Save Vendor Order
 admin.vendorOrder.saveVendorOrder_nav=Save
 admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
 admin.vendorOrder.savevendorOrder_nowaddorderitems=The vendor order was successfully saved. Now add order items.
+admin.vendorOrder.saveVendorOrderItems=Save Items
+admin.vendorOrder.savevendorOrderItems_success=The vendor order items were successfully saved.
 admin.vendorOrder.search=Search
 admin.vendorOrder.search.invaliddates=An invalid date was entered
 admin.vendorOrder.list.showAdvancedSearch=Advanced Search
