Started building out Vendor Order Receiver.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -596,7 +596,7 @@ admin.vendorOrder.deleteVendorOrder_nav=Delete
 admin.vendorOrder.detailVendorOrder=Vendor Order Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
-admin.vendorOrder.detail.tab.vendorOrderDeliveries=Deliveries
+admin.vendorOrder.detail.tab.vendorOrderReceivers=Receivers
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
 admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
@@ -1232,6 +1232,7 @@ entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrder.subtotal=Subtotal
 entity.vendorOrder.taxTotal=Tax
 entity.vendorOrder.total=Total
+entity.vendorOrder.type=Type
 entity.vendorOrder.createdDateTime=Created Date/Time
 
 entity.vendorOrderitem.quantityIn=Quantity In
