Further work on Vendor Order Receiver. Corrected pager on Price Groups listing page.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -622,6 +622,11 @@ admin.vendorOrder.search.invaliddates=An invalid date was entered
 admin.vendorOrder.list.showAdvancedSearch=Advanced Search
 admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
 
+admin.vendorOrderReceiver.create=Receive Items
+admin.vendorOrderReceiver.basicvendorOrderrecenverinfo=Basic Vendor Order Info
+admin.vendorOrderReceiver.receiveForLocation=Receive For Location
+
+
 
 defaultMessage_Boolean={1} must be a valid boolean.
 defaultMessage_CollectionSize_Between={1} size is not between {2} and {3}.
@@ -1239,6 +1244,7 @@ entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.detail.cost=Cost
 entity.vendorOrderitem.stockLocation=Location
 
+entity.vendorOrderReceiver.dateReceived=Date Received
 
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
