Work on Vendor Order Receiving

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -590,10 +590,12 @@ admin.vendor.saveVendor_success=The Vendor was sucessfully saved
 admin.vendoraddress.edit.addVendorAddress=Add Vendor Address
 admin.vendorOrder=Vendor Order Manager
 admin.vendorOrder.createVendorOrder=Create New Vendor Order
+admin.vendororder.createvendororderreceiver=Create New Vendor Order Receiver
 admin.vendorOrder.deleteVendorOrder=Delete Vendor Order
 admin.vendorOrder.deleteVendorOrder_confirm=Are you sure that you would like to delete this vendor order?
 admin.vendorOrder.deleteVendorOrder_nav=Delete
 admin.vendorOrder.detailVendorOrder=Vendor Order Detail
+admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
 admin.vendorOrder.detail.tab.vendorOrderReceivers=Receivers
@@ -617,15 +619,17 @@ admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
 admin.vendorOrder.savevendorOrder_nowaddorderitems=The vendor order was successfully saved. Now add order items.
 admin.vendorOrder.saveVendorOrderItems=Save Items
 admin.vendorOrder.savevendorOrderItems_success=The vendor order items were successfully saved.
+admin.vendorOrder.savevendorOrderReceiver_success=The vendor order reciever was successfully saved.
 admin.vendorOrder.search=Search
 admin.vendorOrder.search.invaliddates=An invalid date was entered
+admin.vendorOrder.vendorOrderItemsDialogTitle=Update Items for Product {1} on Vendor Order
 admin.vendorOrder.list.showAdvancedSearch=Advanced Search
 admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
 
 admin.vendorOrderReceiver.create=Receive Items
 admin.vendorOrderReceiver.basicvendorOrderrecenverinfo=Basic Vendor Order Info
 admin.vendorOrderReceiver.receiveForLocation=Receive For Location
-
+admin.vendorOrderReceiver.selectReceiveForLocation=Select
 
 
 defaultMessage_Boolean={1} must be a valid boolean.
@@ -1204,7 +1208,7 @@ entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
-entity.type.type=type
+entity.type.type=Type
 entity.type.typeID=typeID
 entity.user.company=company
 entity.user.firstName=firstName
@@ -1232,7 +1236,7 @@ entity.vendoremail.vendorEmailType=vendorEmailType
 entity.vendorOrder.vendor=Vendor
 entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
 entity.vendorOrder.vendorOrderNumber=Order Number
-entity.vendorOrder.vendorOrderType=Order Type
+entity.vendorOrder.vendorOrderType.type=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrder.subtotal=Subtotal
 entity.vendorOrder.taxTotal=Tax
@@ -1244,7 +1248,8 @@ entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.detail.cost=Cost
 entity.vendorOrderitem.stockLocation=Location
 
-entity.vendorOrderReceiver.dateReceived=Date Received
+entity.vendorOrderReceiver.boxCount=Box Count
+entity.vendorOrderReceiver.createdDateTime=Date Created
 
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
