Updates for order returns, but will be rolling these back. Fixed Vendor Address handling.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -42,7 +42,7 @@ admin.attribute.detailAttributeSet.addAttribute=Add Attribute
 admin.attribute.detailAttributeSet.addAttributeOption=Add Option
 admin.attribute.detailAttributeSet.removeAttributeOption=Remove Option
 admin.attribute.detailattributeset=Attribute Set Details
-admin.attribute.detailattributeset.noAtributes=No Attributes have been created for this attribute set yet.
+admin.attribute.detailattributeset.noAtributes=No Attributes have been created for this attribute set.
 admin.attribute.edit=Manage Attribute Set
 admin.attribute.editAttributeSet=Edit Attribute Set
 admin.attribute.listByAttributeSets=View List by Attribute Sets
@@ -138,7 +138,7 @@ admin.option.list=List Product Options
 admin.option.listbyoptiongroups=List Product Options By Option Groups
 admin.option.listbyoptions=List Product Options By Option
 admin.option.listoptiongroups=List Option Groups
-admin.option.listoptiongroups.noOptionGroups=No Option Groups have been setup yet.
+admin.option.listoptiongroups.noOptionGroups=No Option Groups have been setup.
 admin.option.nooptiongroupsdefined=There are currently no product option groups defined.
 admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
@@ -179,10 +179,12 @@ admin.order.chargeOrderPayment_confirm=Are you sure you want to process this pay
 admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
+admin:order.createReturnOrder=Create Return Order
 admin.order.default=Order Dashboard
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
-admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
+admin.order.detail.noorderdeliveries=No deliveries exist for this order.
+admin.order.detail.noorderreturns=No returns exist for this order.
 admin.order.detail.orderitems=Order Items
 admin.order.detail.ordertotals=Order Totals
 admin.order.detail.paymentdetails=Payment Details
@@ -195,6 +197,7 @@ admin.order.detail.subtotal=Subtotal
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detail.tab.orderReturns=Order Returns
 admin.order.detail.total=Total
 admin.order.detail.totalDiscounts=Total Discounts
 admin.order.detail.totalFulfillmentCharge=Fulfillment Charges
@@ -229,6 +232,7 @@ admin.order.refundorderpayment=Refund Payment
 admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
+admin.order.return.createReturnOrder=Create Return
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -324,7 +328,7 @@ admin.product.editproducttype=Edit Product Type
 admin.product.list=List Products
 admin.product.list.inventoryNotTracked=Inventory is not tracked for this product.
 admin.product.listproducttypes=List Product Types
-admin.product.noProductsDefined=No Products have been entered yet.
+admin.product.noProductsDefined=No Products have been entered.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.previewalternateimage=Preview Image
@@ -418,7 +422,7 @@ admin.promotion.editPromotion=Edit Promotion
 admin.promotion.editPromotionReward=Edit Promotion Reward
 admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
-admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined yet.
+admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionReward.item=Items
 admin.promotion.promotionRewardProduct.discountType=Discount Type
@@ -1236,7 +1240,7 @@ entity.vendoremail.vendorEmailType=vendorEmailType
 entity.vendorOrder.vendor=Vendor
 entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
 entity.vendorOrder.vendorOrderNumber=Order Number
-entity.vendorOrder.vendorOrderType.type=Order Type
+entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrder.subtotal=Subtotal
 entity.vendorOrder.taxTotal=Tax
