Lots of work on Stock Receiver.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -571,6 +571,14 @@ admin.sku.updateallprices_success=All SKU prices for this product have been upda
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+admin.stockreceiver.typeName_vendorOrder=Vendor Order
+admin.stockreceiver.typeName_order=Return Order
+admin.stockreceiver.create=Receive Items
+admin.stockreceiver.receiveForLocation=Receive For Location
+admin.stockreceiver.selectReceiveForLocation=Select
+admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
+
+
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
 admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully deleted.
@@ -601,7 +609,7 @@ admin.vendorOrder.detailVendorOrder=Vendor Order Detail
 admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
-admin.vendorOrder.detail.tab.vendorOrderReceivers=Receivers
+admin.vendorOrder.detail.tab.stockReceiverVendorOrders=Receivers
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
 admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
@@ -629,10 +637,6 @@ admin.vendorOrder.vendorOrderItemsDialogTitle=Update Items for Product {1} on Ve
 admin.vendorOrder.list.showAdvancedSearch=Advanced Search
 admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
 
-admin.vendorOrderReceiver.create=Receive Items
-admin.vendorOrderReceiver.basicvendorOrderrecenverinfo=Basic Vendor Order Info
-admin.vendorOrderReceiver.receiveForLocation=Receive For Location
-admin.vendorOrderReceiver.selectReceiveForLocation=Select
 
 
 defaultMessage_Boolean={1} must be a valid boolean.
@@ -1205,6 +1209,11 @@ entity.stockadjustmentitem.newQuantity=newQuantity
 entity.stockadjustmentitem.stock=stock
 entity.stockadjustmentitem.stockAdjustment=stockAdjustment
 entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
+
+entity.stockreceiver.createdDateTime=Created Date
+entity.stockreceiver.boxCount=Box Count
+entity.stockreceiver.packingSlipNumber=Packing Slip Number
+
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
 entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
@@ -1250,9 +1259,6 @@ entity.vendorOrder.createdDateTime=Created Date/Time
 entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.detail.cost=Cost
 entity.vendorOrderitem.stockLocation=Location
-
-entity.vendorOrderReceiver.boxCount=Box Count
-entity.vendorOrderReceiver.createdDateTime=Date Created
 
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
