Completed receiver, less the StockActivity setup.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -624,6 +624,7 @@ admin.vendorOrder.editVendorOrder=Edit Vendor Order
 admin.vendororder.editvendororderproductassignment=Ordering Product: {1}
 admin.vendorOrder.listVendorOrders=List Vendor Orders
 admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of all vendor orders in the system.
+admin.vendorOrder.saveStockReceiverVendorOrder_success=The Stock Receiver was successfully saved.
 admin.vendorOrder.saveVendorOrder=Save Vendor Order
 admin.vendorOrder.saveVendorOrder_nav=Save
 admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
