--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -179,7 +179,7 @@ admin.order.chargeOrderPayment_confirm=Are you sure you want to process this pay
 admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
-admin.order.createReturnOrder=Create Return Order
+admin.order.createOrderReturn=Create Return Order
 admin.order.default=Order Dashboard
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
@@ -197,7 +197,7 @@ admin.order.detail.subtotal=Subtotal
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
-admin.order.detail.tab.referencingOrders=Referencing Orders
+admin.order.detail.tab.referencingOrders=Referencing Orders (Returns)
 admin.order.detail.total=Total
 admin.order.detail.totalDiscounts=Total Discounts
 admin.order.detail.totalFulfillmentCharge=Fulfillment Charges
@@ -567,17 +567,27 @@ admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
+
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
+
+admin.stockreceiver=Stock Receiver
 admin.stockreceiver.typeName_vendorOrder=Vendor Order
 admin.stockreceiver.typeName_order=Return Order
 admin.stockreceiver.create=Receive Items
 admin.stockreceiver.receiveForLocation=Receive For Location
 admin.stockreceiver.selectReceiveForLocation=Select
 admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
-
+admin.stockreceiver.createStockReceiver=Create Stock Receiver
+admin.stockReceiver.detail.sku=Sku
+admin.stockReceiver.detail.receiving=Receiving
+admin.stockReceiver.detail.dueInAfter=Due In After
+admin.stockReceiver.detail.quantityOrdered=Qty Ordered
+admin.stockReceiver.detail.quantityReceived=Qty Received
+admin.stockReceiver.detail.quantityDueIn=Qty Due In
+admin.stockReceiver.detail.allLocations=All Locations
 
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
