Changed to inventory based on discussion with Greg and Sumit.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -232,6 +232,7 @@ admin.order.refundorderpayment=Refund Payment
 admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
+admin.order.saveorderreturn=Save
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -713,8 +714,12 @@ entity.Account.password=Password
 entity.Account.phoneNumber=Phone Number
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.orderTota=Order Total
+entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
+entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
+entity.Order.fulfillmenttotal=Fulfillment Amount
+entity.Order.previouslyrefundedshipping=Previously Refunded Shipping
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.itemDiscountType=Discount Type
