Added validation to VendorOrder. Refactored Vendor Controller to use initVendor().

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -620,6 +620,7 @@ admin.vendorOrder.detailVendorOrder=Vendor Order Detail
 admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
+admin.vendorOrder.detail.disabledReceive=You can not receive items on this order as no items have been added.
 admin.vendorOrder.detail.tab.stockReceiverVendorOrders=Receivers
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
