--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -6,14 +6,15 @@ admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
-admin.account.detail.tab.vendoraddresses=Addresses
-admin.account.detail.tab.vendorbrands=Brands
+admin.account.detail.tab.addresses=Addresses
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
 admin.account.detail.tab.orders=Orders
 admin.account.detail.tab.priceGroups=Price Groups
 admin.account.detail.tab.productReviews=Product Reviews
+admin.account.detail.tab.vendoraddresses=Addresses
+admin.account.detail.tab.vendorbrands=Brands
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -90,15 +91,14 @@ admin.integration.edit=Edit Integration
 admin.integration.list=List Integration Services
 admin.integration.save=Save
 admin.integration.save_success=The Integration Service has been saved Successfully
-
 admin.location=Location Manager
 admin.location.createLocation=Create New Location
 admin.location.deleteLocation=Delete Location
 admin.location.deleteLocation_confirm=Are you sure that you would like to delete this location?
-admin.location.deletelocation_disabled=Location can not be deleted.
+admin.location.deleteLocation_failure=The location could not be deleted.
 admin.location.deleteLocation_nav=Delete
 admin.location.deleteLocation_success=The location was deleted successfully.
-admin.location.deleteLocation_failure=The location could not be deleted.
+admin.location.deletelocation_disabled=Location can not be deleted.
 admin.location.detailLocation=Location Detail
 admin.location.editLocation=Edit Location
 admin.location.listLocations=List Locations
@@ -568,89 +568,83 @@ admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
-
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.uploadImage=Upload Image
-
-admin.stockreceiver=Stock Receiver
-admin.stockreceiver.typeName_vendorOrder=Vendor Order
-admin.stockreceiver.typeName_order=Return Order
-admin.stockreceiver.create=Receive Items
-admin.stockreceiver.receiveForLocation=Receive For Location
-admin.stockreceiver.selectReceiveForLocation=Select
-admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
-admin.stockreceiver.createStockReceiver=Create Stock Receiver
-admin.stockReceiver.detail.sku=Sku
-admin.stockReceiver.detail.receiving=Receiving
+admin.stockReceiver.detail.allLocations=All Locations
 admin.stockReceiver.detail.dueInAfter=Due In After
+admin.stockReceiver.detail.quantityDueIn=Qty Due In
 admin.stockReceiver.detail.quantityOrdered=Qty Ordered
 admin.stockReceiver.detail.quantityReceived=Qty Received
-admin.stockReceiver.detail.quantityDueIn=Qty Due In
-admin.stockReceiver.detail.allLocations=All Locations
-
+admin.stockReceiver.detail.receiving=Receiving
+admin.stockReceiver.detail.sku=Sku
+admin.stockReceiver.saveStockReceiverVendorOrder=Save Stock Receiver
+admin.stockreceiver=Stock Receiver
+admin.stockreceiver.create=Receive Items
+admin.stockreceiver.createStockReceiver=Create Stock Receiver
+admin.stockreceiver.receiveForLocation=Receive For Location
+admin.stockreceiver.selectReceiveForLocation=Select
+admin.stockreceiver.typeName_order=Return Order
+admin.stockreceiver.typeName_vendorOrder=Vendor Order
 admin.vendor=Vendor Manager
 admin.vendor.createVendor=Create New Vendor
-admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully deleted.
-admin.vendor.deleteVendorAddress_error=Errors were encountered while deleting the vendor address.
-admin.vendor.deletevendoraddress_confirm=Are you sure that you would like to delete this vendor address?
 admin.vendor.deleteVendor=Delete Vendor
-admin.vendor.delete_success=The vendor was successfully deleted.
+admin.vendor.deleteVendorAddress_error=Errors were encountered while deleting the vendor address.
+admin.vendor.deleteVendorAddress_success=The Vendor Address was successfully deleted.
 admin.vendor.deleteVendor_confirm=Are you sure that you would like to delete this vendor?
-admin.vendor.deletevendor_disabled=Vendor can not be deleted because it is in use by a Vendor Order
 admin.vendor.deleteVendor_nav=Delete
+admin.vendor.delete_success=The vendor was successfully deleted.
+admin.vendor.deletevendor_disabled=Vendor can not be deleted because it is in use by a Vendor Order
+admin.vendor.deletevendoraddress_confirm=Are you sure that you would like to delete this vendor address?
+admin.vendor.detail.tab.vendorOrders=Orders
 admin.vendor.detailVendor=Vendor Detail
 admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
-admin.vendor.detail.tab.vendorOrders=Orders
 admin.vendor.editVendor=Edit Vendor
 admin.vendor.listVendors=List Vendors
 admin.vendor.listVendors_hint=The Vendor Listing shows a grid of all vendors in the system.
 admin.vendor.saveVendor=Save Vendor
 admin.vendor.saveVendor_nav=Save
 admin.vendor.saveVendor_success=The Vendor was sucessfully saved
-admin.vendoraddress.edit.addVendorAddress=Add Vendor Address
 admin.vendorOrder=Vendor Order Manager
 admin.vendorOrder.createVendorOrder=Create New Vendor Order
-admin.vendororder.createvendororderreceiver=Create New Vendor Order Receiver
 admin.vendorOrder.deleteVendorOrder=Delete Vendor Order
 admin.vendorOrder.deleteVendorOrder_confirm=Are you sure that you would like to delete this vendor order?
 admin.vendorOrder.deleteVendorOrder_nav=Delete
-admin.vendorOrder.detailVendorOrder=Vendor Order Detail
-admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.detail=Vendor Order Detail
 admin.vendorOrder.detail.basicvendorOrderinfo=Basic Vendor Order Info
+admin.vendorOrder.detail.subtotal=Subtotal
 admin.vendorOrder.detail.tab.stockReceiverVendorOrders=Receivers
 admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
+admin.vendorOrder.detail.total=Total
+admin.vendorOrder.detail.totaltax=Total Tax
 admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
 admin.vendorOrder.detail.vendorproduct=Product
 admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
 admin.vendorOrder.detail.vendorproduct_edit=Edit
 admin.vendorOrder.detail.vendorproducts_empty=Sorry, there are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
-admin.vendorOrder.detail.subtotal=Subtotal
-admin.vendorOrder.detail.totaltax=Total Tax
-admin.vendorOrder.detail.total=Total
+admin.vendorOrder.detailVendorOrder=Vendor Order Detail
+admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.editVendorOrder=Edit Vendor Order
-admin.vendororder.editvendororderproductassignment=Ordering Product: {1}
+admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
+admin.vendorOrder.list.showAdvancedSearch=Advanced Search
 admin.vendorOrder.listVendorOrders=List Vendor Orders
 admin.vendorOrder.listVendorOrders_hint=The Vendor Order Listing shows a grid of all vendor orders in the system.
 admin.vendorOrder.saveStockReceiverVendorOrder_success=The Stock Receiver was successfully saved.
 admin.vendorOrder.saveVendorOrder=Save Vendor Order
+admin.vendorOrder.saveVendorOrderItems=Save Items
 admin.vendorOrder.saveVendorOrder_nav=Save
 admin.vendorOrder.saveVendorOrder_success=The Vendor Order was sucessfully saved
-admin.vendorOrder.savevendorOrder_nowaddorderitems=The vendor order was successfully saved. Now add order items.
-admin.vendorOrder.saveVendorOrderItems=Save Items
 admin.vendorOrder.savevendorOrderItems_success=The vendor order items were successfully saved.
 admin.vendorOrder.savevendorOrderReceiver_success=The vendor order reciever was successfully saved.
+admin.vendorOrder.savevendorOrder_nowaddorderitems=The vendor order was successfully saved. Now add order items.
 admin.vendorOrder.search=Search
 admin.vendorOrder.search.invaliddates=An invalid date was entered
 admin.vendorOrder.vendorOrderItemsDialogTitle=Update Items for Product {1} on Vendor Order
-admin.vendorOrder.list.showAdvancedSearch=Advanced Search
-admin.vendorOrder.list.searchresultsfound=Search Result(s) Found
-
-
-
+admin.vendoraddress.edit.addVendorAddress=Add Vendor Address
+admin.vendororder.createvendororderreceiver=Create New Vendor Order Receiver
+admin.vendororder.editvendororderproductassignment=Ordering Product\: {1}
 defaultMessage_Boolean={1} must be a valid boolean.
 defaultMessage_CollectionSize_Between={1} size is not between {2} and {3}.
 defaultMessage_CollectionSize_GTE={1} size is not equal to or greater than {2}.
@@ -713,13 +707,13 @@ entity.Account.emailAddress=Email Address
 entity.Account.password=Password
 entity.Account.phoneNumber=Phone Number
 entity.Order.fulfillmentTotal=Delivery Charges
+entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
+entity.Order.previouslyrefundedshipping=Previously Refunded Shipping
 entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
 entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
-entity.Order.fulfillmenttotal=Fulfillment Amount
-entity.Order.previouslyrefundedshipping=Previously Refunded Shipping
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.itemDiscountType=Discount Type
@@ -730,6 +724,8 @@ entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
+entity.Vendor.brands=Brands Offered
+entity.Vendor.emailAddress=Email Address
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
@@ -1225,11 +1221,9 @@ entity.stockadjustmentitem.newQuantity=newQuantity
 entity.stockadjustmentitem.stock=stock
 entity.stockadjustmentitem.stockAdjustment=stockAdjustment
 entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
-
-entity.stockreceiver.createdDateTime=Created Date
 entity.stockreceiver.boxCount=Box Count
+entity.stockreceiver.createdDateTime=Created Date
 entity.stockreceiver.packingSlipNumber=Packing Slip Number
-
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
 entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
@@ -1244,14 +1238,25 @@ entity.user.lastName=lastName
 entity.user.muraUserID=muraUserID
 entity.vendor.accountNumber=Account Number
 entity.vendor.emailAddresses=Email Addresses
-entity.Vendor.emailAddress=Email Address
-entity.vendor.phoneNumbers=Phone Numbers
 entity.vendor.numberBrands=Brands Offered
-entity.Vendor.brands=Brands Offered
+entity.vendor.phoneNumbers=Phone Numbers
 entity.vendor.vendorID=Vendor ID
 entity.vendor.vendorName=Vendor Name
-entity.vendor.vendorWebsite=Vendor Website
 entity.vendor.vendorOrderType=Order Type
+entity.vendor.vendorWebsite=Vendor Website
+entity.vendorOrder.createdDateTime=Created Date/Time
+entity.vendorOrder.subtotal=Subtotal
+entity.vendorOrder.taxTotal=Tax
+entity.vendorOrder.total=Total
+entity.vendorOrder.type=Type
+entity.vendorOrder.vendor=Vendor
+entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
+entity.vendorOrder.vendorOrderNumber=Order Number
+entity.vendorOrder.vendorOrderType=Order Type
+entity.vendorOrder.vendorOrderid=Vendor Order ID
+entity.vendorOrderitem.detail.cost=Cost
+entity.vendorOrderitem.quantityIn=Quantity In
+entity.vendorOrderitem.stockLocation=Location
 entity.vendoraddress.address=address
 entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
@@ -1260,22 +1265,6 @@ entity.vendoremail.email=email
 entity.vendoremail.vendor=vendor
 entity.vendoremail.vendorEmailID=vendorEmailID
 entity.vendoremail.vendorEmailType=vendorEmailType
-
-entity.vendorOrder.vendor=Vendor
-entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
-entity.vendorOrder.vendorOrderNumber=Order Number
-entity.vendorOrder.vendorOrderType=Order Type
-entity.vendorOrder.vendorOrderid=Vendor Order ID
-entity.vendorOrder.subtotal=Subtotal
-entity.vendorOrder.taxTotal=Tax
-entity.vendorOrder.total=Total
-entity.vendorOrder.type=Type
-entity.vendorOrder.createdDateTime=Created Date/Time
-
-entity.vendorOrderitem.quantityIn=Quantity In
-entity.vendorOrderitem.detail.cost=Cost
-entity.vendorOrderitem.stockLocation=Location
-
 entity.vendorphone.phone=phone
 entity.vendorphone.vendor=vendor
 entity.vendorphone.vendorPhoneID=vendorPhoneID
