--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -603,6 +603,8 @@ admin.vendor.deleteVendor_nav=Delete
 admin.vendor.detailVendor=Vendor Detail
 admin.vendor.detailVendor.tab.vendorOrders=VendorOrders
 admin.vendor.detail.tab.vendorOrders=Orders
+admin.vendor.detail.tab.vendorOrders.noBrands=There are currently no brands assigned to this vendor, therefore you currently cannot create vendor orders.
+admin.vendor.detail.tab.vendorOrders.noOrders=There are currently no orders for this vendor.
 admin.vendor.editVendor=Edit Vendor
 admin.vendor.listVendors=List Vendors
 admin.vendor.listVendors_hint=The Vendor Listing shows a grid of all vendors in the system.
@@ -628,6 +630,7 @@ admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
 admin.vendorOrder.detail.vendorproduct=Product
 admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
 admin.vendorOrder.detail.vendorproduct_edit=Edit
+admin.vendorOrder.detail.vendorproducts_description=The following products are those of brands that are supported by this vendor.
 admin.vendorOrder.detail.vendorproducts_empty=Sorry, there are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
 admin.vendorOrder.detail.subtotal=Subtotal
 admin.vendorOrder.detail.totaltax=Total Tax
