Added language to the vendor and vendor order interfaces. Removed "totals" from vendor order products tab.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -622,12 +622,14 @@ admin.vendorOrder.detail.tab.vendorOrderItems=Ordered Items
 admin.vendorOrder.detail.tab.vendorOrderProducts=Products from Vendor
 admin.vendorOrder.detail.total=Total
 admin.vendorOrder.detail.totaltax=Total Tax
+admin.vendorOrder.detail.tab.stockReceivers.noStockReceivers=There are currently no stock receivers. To receive stock, create a vendor order and use the "Receive Items" button.
+admin.vendorOrder.detail.tab.products.noProducts=There are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
+admin.vendorOrder.detail.tab.items.noItems=There are currently no items ordered on this vendor order. To add items, click on the "Products from Vendor" tab and add products from that vendor.
 admin.vendorOrder.detail.vendorOrderTotals=Vendor Order Totals
 admin.vendorOrder.detail.vendorproduct=Product
 admin.vendorOrder.detail.vendorproduct_addToOrder=Add To Order
 admin.vendorOrder.detail.vendorproduct_edit=Edit
 admin.vendorOrder.detail.vendorproducts_description=The following products are those of brands that are supported by this vendor.
-admin.vendorOrder.detail.vendorproducts_empty=Sorry, there are no products offered by this vendor. Only products of a brand being offered by this vendor will be displayed. Edit the vendor and change the brands that they offer, or add products to already offered brands.
 admin.vendorOrder.detailVendorOrder=Vendor Order Detail
 admin.vendorOrder.detailVendorOrderReceiver=Vendor Order Receiver Detail
 admin.vendorOrder.editVendorOrder=Edit Vendor Order
