--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1381,3 +1381,4 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+entity.VendorEmailAddress.emailAddress=Email Address
